# trace-diagnose

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 001_init.sql  002_alerts.sql  003_health_capacity.sql  004_health_enhancements.sql
backend/src/: analysis.rs  cache.rs  config.rs  db.rs  handlers.rs  health.rs  importer.rs  main.rs  models.rs
examples/: sample-otel.json
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.svelte  api.js
frontend/src/components/: Card.svelte  Navbar.svelte  StatCard.svelte
frontend/src/pages/: AlertCenter.svelte  AlertEvents.svelte  AlertRules.svelte  Analysis.svelte  BatchCompare.svelte  Dashboard.svelte  Import.svelte  SLO.svelte  ServiceHealth.svelte  Topology.svelte  TraceDetail.svelte  Traces.svelte  WebhookConfig.svelte
