[package]
name = "trace-diagnose-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
multer = "3"
bytes = "1"
thiserror = "1"
anyhow = "1"
regex = "1"
percent-encoding = "2"
